# gcp-llm-serving-benchmarks

./: .env.sample  .gitignore  Justfile  README.md  analysis.ipynb  gcp-llm-serving-benchmarks.code-workspace  locustfile.py  pyproject.toml
results/: CloudRunOllama_gemma3:12b_failures.csv  CloudRunOllama_gemma3:12b_stats.csv  CloudRun_gemma3:12b_stats_history.csv  VertexAIEndpoint_gemma-3-12b-it_failures.csv  VertexAIEndpoint_gemma-3-12b-it_stats.csv  VertexAIEndpoint_gemma-3-12b-it_stats_history.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17-thinking_failures.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17-thinking_stats.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17-thinking_stats_history.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17_failures.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17_stats.csv  VertexAIMaaS_gemini-2.5-flash-lite-preview-06-17_stats_history.csv  VertexAIMaaS_gemini-2.5-flash-thinking_failures.csv  VertexAIMaaS_gemini-2.5-flash-thinking_stats.csv  VertexAIMaaS_gemini-2.5-flash-thinking_stats_history.csv  VertexAIMaaS_gemini-2.5-flash_failures.csv  VertexAIMaaS_gemini-2.5-flash_stats.csv  VertexAIMaaS_gemini-2.5-flash_stats_history.csv
