[project]
name = "gcp-llm-serving-benchmarks"
version = "0.1.0"
description = "A comprehensive benchmark analysis of various solutions for serving Large Language Models (LLMs) on Google Cloud Platform (GCP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "locust>=2.37.12",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]
