[project]
name = "gcp-llm-serving-benchmarks"
version = "0.1.0"
description = "A comprehensive benchmark analysis of various solutions for serving Large Language Models (LLMs) on Google Cloud Platform (GCP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "locust>=2.37.12",
    "notebook>=7.4.4",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "nbformat>=5.10.4", "ruff>=0.12.3", "ty>=0.0.1a14"]
